dynamically load commuinities list